getFirst() to get(0)